aarch32: Fix wrong message of the ArrayIndexOutOfBoundException

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • port-stage-aarch32-8
    • Affects Version/s: port-stage-aarch32-8, port-stage-aarch32-9
    • Component/s: hotspot
    • None
    • aarch32
    • linux

      There is a minor copy-past issue in the ArrayIndexOutOfBoundException implementation for aarch32 port.
      Application throws expected java.lang.ArrayIndexOutOfBoundsException with incorrect text (“1686608040" instead of index value) in the Xint mode:

      There is no such problem in the Xcomp Xbatch mode

      The reason of the issue : TemplateInterpreterGenerator::generate_ArrayIndexOutOfBounds_handler reads index element from the r1 register instead of register r2

            Assignee:
            Ed Nevill
            Reporter:
            Ed Nevill
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: