8156948: aarch32: Fix wrong message of the ArrayIndexOutOfBoundException Reviewed-by: enevill Contributed-by: alexey@azul.com